--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -1,1 +1,61 @@
+<!doctype html>
+<html lang="pt-br">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Política de Privacidade — Agente Financeiro WPP</title>
+  <link rel="canonical" href="https://guipasquetti.github.io/politica-privacidade.html" />
+  <style>
+    body{font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;margin:0;background:#0b0f14;color:#e9eef5}
+    main{max-width:960px;margin:0 auto;padding:32px 16px}
+    a{color:#24d366;text-decoration:none}
+    h1{margin-top:0}
+    .muted{color:#a7b2c2}
+  </style>
+</head>
+<body>
+<main>
+  <h1>Política de Privacidade</h1>
+  <p class="muted">Última atualização: <script>document.write(new Date().toLocaleDateString('pt-BR'))</script></p>
 
+  <p>Esta Política descreve como o <b>Agente Financeiro WPP</b> trata os seus dados
+  ao utilizar o serviço via WhatsApp.</p>
+
+  <h2>1. Dados coletados</h2>
+  <ul>
+    <li>Mensagens enviadas voluntariamente (ex.: lançamentos financeiros, categorias e observações);</li>
+    <li>Dados de contato (nome/telefone) fornecidos no WhatsApp;</li>
+    <li>Dados técnicos mínimos para operação (timestamps e logs de integração).</li>
+  </ul>
+
+  <h2>2. Finalidade</h2>
+  <p>Usamos seus dados para registrar e organizar seus lançamentos, enviar lembretes e,
+  quando solicitado, integrar com sua planilha (Google Sheets).</p>
+
+  <h2>3. Base legal</h2>
+  <p>Tratamento com base na execução do serviço solicitado e legítimo interesse, respeitando seus direitos (LGPD).</p>
+
+  <h2>4. Compartilhamento</h2>
+  <p>Compartilhamos dados apenas com serviços estritamente necessários (por exemplo, Google Sheets), 
+  conforme suas configurações. Não vendemos seus dados.</p>
+
+  <h2>5. Segurança</h2>
+  <p>Adotamos medidas técnicas e administrativas para proteger as informações sob nosso controle.</p>
+
+  <h2>6. Retenção e exclusão</h2>
+  <p>Guardamos os dados pelo tempo necessário à prestação do serviço e obrigações legais. 
+  Você pode solicitar a exclusão a qualquer momento.</p>
+
+  <h2>7. Direitos do titular</h2>
+  <p>Você pode solicitar acesso, correção, portabilidade e exclusão dos seus dados pelo e-mail 
+    <a href="mailto:contato@seudominio.com.br">contato@seudominio.com.br</a>.
+  </p>
+
+  <h2>8. Contato</h2>
+  <p>E-mail: <a href="mailto:contato@seudominio.com.br">contato@seudominio.com.br</a> •
+     WhatsApp: <a href="https://wa.me/5511973747278" target="_blank" rel="noopener">+55 (11) 97374-7278</a></p>
+
+  <p class="muted"><a href="/">← Voltar ao site</a></p>
+</main>
+</body>
+</html>
