--- a/termos-uso.html
+++ b/termos-uso.html
@@ -1,1 +1,51 @@
+<!doctype html>
+<html lang="pt-br">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Termos de Uso — Agente Financeiro WPP</title>
+  <link rel="canonical" href="https://guipasquetti.github.io/termos-uso.html" />
+  <style>
+    body{font:16px/1.6 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,'Helvetica Neue',Arial;margin:0;background:#0b0f14;color:#e9eef5}
+    main{max-width:960px;margin:0 auto;padding:32px 16px}
+    a{color:#24d366;text-decoration:none}
+    h1{margin-top:0}
+    .muted{color:#a7b2c2}
+  </style>
+</head>
+<body>
+<main>
+  <h1>Termos de Uso</h1>
+  <p class="muted">Última atualização: <script>document.write(new Date().toLocaleDateString('pt-BR'))</script></p>
 
+  <h2>1. Aceitação</h2>
+  <p>Ao utilizar o <b>Agente Financeiro WPP</b>, você concorda com estes Termos e com a 
+    <a href="/politica-privacidade.html">Política de Privacidade</a>.
+  </p>
+
+  <h2>2. Serviço</h2>
+  <p>O serviço registra lançamentos financeiros enviados por WhatsApp e pode integrar com planilhas Google.
+     É um assistente de organização pessoal e não constitui consultoria financeira ou contábil.</p>
+
+  <h2>3. Responsabilidades do usuário</h2>
+  <ul>
+    <li>Fornecer informações verdadeiras;</li>
+    <li>Não enviar conteúdo ilegal ou sensível desnecessário;</li>
+    <li>Guardar seus próprios acessos e dispositivos com segurança.</li>
+  </ul>
+
+  <h2>4. Limitação de responsabilidade</h2>
+  <p>Empregamos esforços razoáveis para manter o serviço funcional, mas não garantimos disponibilidade ininterrupta.
+     Em nenhuma hipótese seremos responsáveis por danos indiretos decorrentes do uso.</p>
+
+  <h2>5. Alterações</h2>
+  <p>Podemos atualizar estes Termos a qualquer momento, publicando a nova versão nesta página.</p>
+
+  <h2>6. Contato</h2>
+  <p>E-mail: <a href="mailto:contato@seudominio.com.br">contato@seudominio.com.br</a> •
+     WhatsApp: <a href="https://wa.me/5511973747278" target="_blank" rel="noopener">+55 (11) 97374-7278</a></p>
+
+  <p class="muted"><a href="/">← Voltar ao site</a></p>
+</main>
+</body>
+</html>
