--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Agente Financeiro WPP — Assistente pelo WhatsApp</title>
+  <meta name="facebook-domain-verification" content="taj9lay0Zc4waJ2yX9bpw0erqP" />
 
   <!-- SEO básico -->
   <meta name="description" content="Assistente financeiro simples pelo WhatsApp: organização de despesas, lembretes e registro de lançamentos. Fale conosco pelo WhatsApp." />
